# nexocred

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  environment.yml  pyproject.toml
.playwright-mcp/: page-2026-06-14T10-58-23-527Z.yml  page-2026-06-14T10-58-57-506Z.yml  page-2026-06-14T10-59-26-051Z.yml  page-2026-06-14T10-59-41-943Z.yml  page-2026-06-14T11-00-07-956Z.yml
backend/: Dockerfile
backend/alembic/: env.py
backend/app/: __init__.py  api.py  auditoria.py  config.py  db.py  deps.py  errors.py  finanzas.py  idempotencia.py  locking.py  logging_setup.py  main.py  modelos_base.py  modelos_stub.py  openapi_custom.py  paginacion.py  parametros_globales.py  registro_modelos.py  tipos.py
backend/nexocred_core/: __init__.py  correccion.py  cronograma.py  errores.py  modelos.py  money.py  payoff.py  saldo.py  tolerancia.py  waterfall.py
backend/scripts/: backup.sh  exportar_openapi.py  exportar_openapi_f1b.py  exportar_openapi_f1c.py  exportar_openapi_f1d.py  restore.sh  seed_demo.py  seed_full.py
backend/tests/: _seed_f1d.py  conftest.py  test_beat_schedule.py  test_compose_config.py  test_entorno.py  test_logging.py  test_scripts_existen.py  test_seed_demo.py
docs/: AUDITORIA_2026-06-14.md  AUDITORIA_CODIGO_2026-06-12.md  AUDIT_MOCKS.md  DECISIONES_NEGOCIO.md  DEUDA_TECNICA.md  ESPECIFICACIONES_FUNCIONALES_CEO.md  RELEASE_NOTES.md  RUNBOOK.md
frontend/: .gitignore  eslint.config.js  index.html  openapi.json  package-lock.json  package.json  playwright.config.ts  tailwind.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
(+398 files in other folders)
